# pkg-maraubot

./: README.md  example-simpleSim.py
MarauBotMap/: README.md  pyproject.toml
MarauBotMap/src/: play.py
MarauBotMap/src/maraubotmap/: __init__.py  body.py  frame.py  loupe.py  wizard.py  world.py
MarauBotMap/tests/: test_11_world.py
