[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MarauBotMap"
version = "0.0.1"
authors = [
  { name="Guillaume Lozenguez", email="guillaume.lozenguez@imt-nord-europe.fr" },
]
description = "Simple Robot Simulator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://ktorz.bitbucket.io/"
